# TestLibvlcNative

./: .gitignore  CMakeLists.txt  README.md  TestLibVLCNative.pro  build-docker-image.sh  build-docker.sh  build.sh  d3d11_player.cpp  main.c  main.cpp  player.cpp  player.h
docker/: Dockerfile  Toolchain.i686-w64-mingw32.cmake  Toolchain.x86_64-w64-mingw32.cmake  build-qt.sh
